# osl

./: .gitignore  CMakeLists.txt  INSTALL.mingw  Makefile  makefile.conf
core/osl/: basic_type.h
core/osl/bits/: align16New.cc
debian/: changelog  control  copyright  makefile.local.i386  rules
full/osl/game_playing/: csaClient.cc  csaLogger.cc  weightTracer.cc
full/osl/search/: alphaBeta2.cc  alphaBeta2Parallel.cc  interimReport.h  usiProxy.cc  usiProxy.h
sample/: Makefile  random_play.cc
sample/opening/: compare-book.cc  show-moves.cc
sample/record/: csa-to-kifu-header-sample.txt
std/osl/: pathEncoding.cc
std/osl/checkmate/: proofNumberTable.cc
std/osl/effect_util/: neighboring8Direct.cc
std/osl/misc/: milliSeconds.h
std/osl/record/: csaRecord.cc  record.cc
tools/kanji2csa/: 200501.html
